# protovalidate-buffa

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  release-notes.yml  release-please.yml  release.yml
crates/protoc-gen-protovalidate-buffa/: CHANGELOG.md  Cargo.toml
crates/protoc-gen-protovalidate-buffa/src/: ctx.rs  lib.rs  main.rs  scan.rs
crates/protoc-gen-protovalidate-buffa/src/emit/: cel.rs  cel_compile.rs  field.rs  mod.rs  oneof.rs  repeated.rs
crates/protoc-gen-protovalidate-buffa/tests/: keyword_idents.rs  optional_string_pattern.rs
crates/protovalidate-buffa/: CHANGELOG.md  Cargo.toml
crates/protovalidate-buffa-conformance/: Cargo.toml  README.md  build.rs
crates/protovalidate-buffa-conformance/src/: main.rs  registry.rs
crates/protovalidate-buffa-conformance/tests/: emit_compiles.rs
crates/protovalidate-buffa-macros/: CHANGELOG.md  Cargo.toml
crates/protovalidate-buffa-macros/src/: lib.rs
crates/protovalidate-buffa-protos/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/protovalidate-buffa-protos/src/: lib.rs
crates/protovalidate-buffa/src/: cel.rs  connect.rs  error.rs  lib.rs  rules.rs
crates/protovalidate-buffa/tests/: connect.rs  connect_impl.rs  error.rs  wkt_cel.rs
