[workspace]
resolver = "2"
members = [
  "crates/protoc-gen-protovalidate-buffa",
  "crates/protovalidate-buffa",
  "crates/protovalidate-buffa-conformance",
  "crates/protovalidate-buffa-macros",
  "crates/protovalidate-buffa-protos",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0 OR MIT"
authors = ["Mathematic Inc"]
repository = "https://github.com/mathematic-inc/protovalidate-buffa"
homepage = "https://github.com/mathematic-inc/protovalidate-buffa"
categories = ["development-tools", "network-programming"]
keywords = ["protobuf", "protovalidate", "buffa", "validation", "codegen"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[patch.crates-io]
buffa = { git = "https://github.com/anthropics/buffa", rev = "4c264ddd6fdd286f237dac0551fd420907b4864c" }
buffa-codegen = { git = "https://github.com/anthropics/buffa", rev = "4c264ddd6fdd286f237dac0551fd420907b4864c" }
buffa-build = { git = "https://github.com/anthropics/buffa", rev = "4c264ddd6fdd286f237dac0551fd420907b4864c" }
buffa-descriptor = { git = "https://github.com/anthropics/buffa", rev = "4c264ddd6fdd286f237dac0551fd420907b4864c" }
