[package]
name = "protovalidate-buffa"
description = "Runtime for protoc-gen-protovalidate-buffa — Validate trait, ValidationError types, rule helpers, and the CelScalar / Duration / Timestamp helpers that compile-time-expanded CEL rules call into. No CEL interpreter at runtime."
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = ["connect"]
connect = ["dep:connectrpc"]
# Enables `chrono-tz` for the timezone argument on CEL timestamp
# accessors (`t.getHours("America/New_York")`). chrono-tz ships the
# full IANA database (~4 MiB), so it's opt-in — rules that only use
# the no-arg accessor forms have no reason to pay the cost. When the
# feature is off, generated code that references the tz arg fails to
# compile with a clear "chrono_tz" missing-module error.
tz = ["dep:chrono-tz"]

[dependencies]
buffa = "0.6"
protovalidate-buffa-macros = { path = "../protovalidate-buffa-macros", version = "0.3.0" }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = { version = "0.10", optional = true }
uuid = "1"
ulid = "1"
ipnet = "2"
fluent-uri = "0.4"
connectrpc = { version = "0.6", default-features = false, optional = true }
percent-encoding = "2"
http = "1"
